--- a/index.html
+++ b/index.html
@@ -43,13 +43,13 @@
             <div class="container px-5 py-24 mx-auto flex flex-col">
               <div class="lg:w-4/6 mx-auto">
                 <div class="rounded-lg h-64 overflow-hidden">
-                  <img alt="content" class="object-cover object-center h-full w-full" src="kd-modified.png">
+                  <img alt="content" class="object-cover object-center h-full w-full" src="first-photo.webp">
                 </div>
                 <div class="flex flex-col sm:flex-row mt-10">
                   <div class="sm:w-1/3 text-center sm:pr-8 sm:py-8">
                     <div class="w-20 h-20 rounded-full inline-flex items-center justify-center bg-gray-200 text-gray-400">
                       
-                        <img src="KUNAL PHOTO.jpeg"></image>
+                        <img src="kd-modified.png"></image>
                       
                     </div>
                     <div class="flex flex-col items-center text-center justify-center">
